# MetaProfile

./: .gitignore  Dockerfile  MetaProfile_四画像工具方案.docx  MetaProfile_画像工具流程图.drawio  MetaProfile_系统架构图.drawio  MetaProfile_软件用户手册.docx  MetaProfile软件用户手册.docx  MetaProfile软件用户手册_0616v2.docx  ODS数据量统计_20260616.xlsx  ODS表与字段清单_20260529.xlsx  ODS表与字段清单_20260616.xlsx  README.md  _doris_ddl_sync.py  _doris_local_schema.sql  _load_attachment.py  _load_chunked.py  _load_chunked_big.py  alembic.ini  pyproject.toml  业务用户手册.md  使用手册.md  系统测试大纲.docx  系统测试大纲v3.docx  系统测试报告.docx  系统测试报告_0616v1.docx  系统测试报告_0616v2.docx  系统测试报告_0616v3.docx  系统测试报告模板.docx  系统测试计划模板.docx  系统测试说明_0616v2.docx  系统测试说明模板.docx  软件测试大纲_0616v4.docx  软件用户手册.docx  软件用户手册v3.docx
deploy/: .env.example  docker-compose.override.yml  docker-compose.yml  litellm.yaml  mock_data.cypher  mock_data.sql
docs/: MetaProfile软件用户手册.md  design-跨画像跳转-方案A.md  review-criteria-技术手册.md  会话总结-20260616.md  会话总结-20260618-ods-pipeline.md  测试手册-前端.docx  测试手册-前端.md  系统测试大纲v3.md  系统测试报告.md  系统测试说明大纲.md  软件测试大纲_0616v4.md  软件用户手册v3.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
migrations/: env.py
scripts/: _validate.py  capture_manual_shots.py  capture_tabs.py  fill_template.py  gen_diagrams.py  gen_mock_data.py  gen_profile_skeletons.py  gen_test_docs.py  gen_user_manual.py  md_to_docx.py  report_regen.py  report_to_template.py  report_v3.py  report_v3_caption.py  report_v3_sign.py  seed_ods_datasources.py  template_fill_user_manual.py
tests/: conftest.py  test_async_runner.py  (+29 more)
(+356 files in other folders)
