[project]
name = "metaprofile"
version = "1.0.0"
description = "MetaProfile 重点目标对象跟踪系统"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "elasticsearch[async]>=8.12",
    "neo4j>=5.18",
    "redis[hiredis]>=5.0",
    "celery[redis]>=5.3",
    "celery-redbeat>=2.1",
    "httpx>=0.27",
    "structlog>=24.1",
    "tenacity>=8.2",
    "jieba>=0.42",
    "scikit-learn>=1.4",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "mypy>=1.9",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["metaprofile*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
